# FineStructureScript

./: .gitignore  CMakeLists.txt  ENGINE_INTEGRATION.md  FINEGUI_SCRIPTING.md  GUIDE.md  GUI_SCRIPTING_IMPROVEMENTS.md  LANGUAGE_DESIGN.md  LLM_REFERENCE.md  README.md
include/finescript/: ast.h  builtins.h  error.h  evaluator.h  execution_context.h  finescript.h  format_util.h  interner.h  lexer.h  map_data.h  native_function.h  parser.h  proxy_map.h  resource_finder.h  scope.h  scope_proxy_map.h  script_engine.h  source_location.h  token.h  value.h
src/: builtins.cpp  evaluator.cpp  execution_context.cpp  interner.cpp  lexer.cpp  map_data.cpp  parser.cpp  scope.cpp  script_engine.cpp  value.cpp
tests/: CMakeLists.txt  test_builtins.cpp  test_evaluator.cpp  test_integration.cpp  test_interner.cpp  test_lexer.cpp  test_parser.cpp  test_scope.cpp  test_value.cpp
